err/django-datagrid.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/datagrid'...
Listing './lib/python3.5/site-packages/datagrid/templates'...
Listing './lib/python3.5/site-packages/datagrid/templates/datagrid'...
Listing './lib/python3.5/site-packages/datagrid/templatetags'...
Listing './lib/python3.5/site-packages/django_datagrid-1.1.egg-info'...
Listing './lib/python3.5/site-packages/example'...
Listing './lib/python3.5/site-packages/example/blog_grids'...
Listing './lib/python3.5/site-packages/example/blog_grids/templates'...
Listing './lib/python3.5/site-packages/example/blog_grids/templates/blog_grid'...
Listing './lib/python3.5/site-packages/example/blogango'...
Compiling './lib/python3.5/site-packages/example/blogango/akismet.py'...
***   File "./lib/python3.5/site-packages/example/blogango/akismet.py", line 136
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/example/blogango/conf'...
Listing './lib/python3.5/site-packages/example/blogango/fixtures'...
Compiling './lib/python3.5/site-packages/example/blogango/search.py'...
***   File "./lib/python3.5/site-packages/example/blogango/search.py", line 15
    print [result['Url'] for result in results]
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/example/blogango/templates'...
Listing './lib/python3.5/site-packages/example/blogango/templates/blogango'...
Listing './lib/python3.5/site-packages/example/blogango/templates/registration'...
Listing './lib/python3.5/site-packages/example/blogango/templatetags'...
Compiling './lib/python3.5/site-packages/example/blogango/templatetags/gravatar.py'...
***   File "./lib/python3.5/site-packages/example/blogango/templatetags/gravatar.py", line 42
    raise template.TemplateSyntaxError, "%r tag requires a single argument" % token.contents.split()[0]
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/example/datagrid'...
Listing './lib/python3.5/site-packages/example/datagrid/templates'...
Listing './lib/python3.5/site-packages/example/datagrid/templates/datagrid'...
Listing './lib/python3.5/site-packages/example/datagrid/templatetags'...
Listing './lib/python3.5/site-packages/example/media'...
Listing './lib/python3.5/site-packages/example/media/blogango'...
Listing './lib/python3.5/site-packages/example/media/blogango/css'...
Listing './lib/python3.5/site-packages/example/media/blogango/images'...
Listing './lib/python3.5/site-packages/example/media/blogango/js'...
Listing './lib/python3.5/site-packages/example/media/datagrid'...
Listing './lib/python3.5/site-packages/example/media/datagrid/css'...
Listing './lib/python3.5/site-packages/example/media/datagrid/images'...
Listing './lib/python3.5/site-packages/example/media/datagrid/images/datagrid'...
Listing './lib/python3.5/site-packages/example/media/datagrid/js'...
Listing './lib/python3.5/site-packages/example/tmp'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
